--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <img src="public/IMG-20230828-WA0049.jpg" alt="">
               <div class="card-body text-center">
                 <h6 class="card-title">stairs and staircase</h6>
-                <p class="card-text text-secondary">We deal with stairs and staircase drawing and design </p>
+                <p class="card-text text-secondary">I deaz with stairs and staircase drawing and design </p>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
               <img src="public/IMG-20230828-WA0137.jpg" class="img-fluid" alt="portfolio-img">
               <div class="card-body text-center">
                 <h6 class="card-title">Mahogany doors</h6>
-                <p class="card-text text-secondary">We deal with all types of Mahogany doors </p>
+                <p class="card-text text-secondary">I dealt with all types of Mahogany doors </p>
               </div>
             </div>
           </div>
@@ -159,7 +159,7 @@
               <img src="public/IMG-20230828-WA0072.jpg"alt="portfolio-img">
               <div class="card-body text-center">
                 <h6 class="card-title">Flash doors</h6>
-                <p class="card-text text-secondary">We deal with all types of Flash doors</p>
+                <p class="card-text text-secondary">I supervised and dealt with all types of Flash doors</p>
               </div>
             </div>
           </div>
@@ -168,7 +168,7 @@
               <img src="public/IMG-20230828-WA0077.jpg" alt="portfolio-img">
               <div class="card-body text-center">
                 <h6 class="card-title">Steel doors</h6>
-                <p class="card-text text-secondary">We deal with all types of Steel doors</p>
+                <p class="card-text text-secondary">I dealt with all types of Steel doors</p>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
               <img src="public/WhatsApp Image 2023-07-04 at 7.12.14 PM.jpeg" alt="portfolio-img">
               <div class="card-body text-center">
                 <h6 class="card-title">Construction Works</h6>
-                <p class="card-text text-secondary">We deal with all construction works. i.e ; Masonary works, ,renovations, plastering and paint works. </p>
+                <p class="card-text text-secondary">I dealt with all construction works. i.e ; Masonary works, ,renovations, plastering and paint works. </p>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
               <img src="public/WhatsApp Image 2023-10-19 at 08.39.20.jpeg" alt="portfolio-img">
               <div class="card-body text-center">
                 <h6 class="card-title">Architectural drawings</h6>
-                <p class="card-text text-secondary">We do architectural design,structural drawings, construction, and maintenance of building works.</p>
+                <p class="card-text text-secondary">I do architectural design,structural drawings, construction, and maintenance of building works.</p>
               </div>
             </div>
           </div>
