--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <img src="public/IMG-20230828-WA0049.jpg" alt="">
               <div class="card-body text-center">
                 <h6 class="card-title">stairs and staircase</h6>
-                <p class="card-text text-secondary">I deaz with stairs and staircase drawing and design </p>
+                <p class="card-text text-secondary">I dealt with stairs and staircase drawing and design </p>
               </div>
             </div>
           </div>
